[workspace]
members = ["mobiusdb-core", "mobiusdb-flight"]



[workspace.dependencies]
anyhow = "1.0.82"
arrow = "51.0.0"
arrow-flight = "51.0.0"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.4"
