[workspace]
members = ["mobiusdb-core", "mobiusdb-flight", "mobiusdb-lsm"]



[workspace.dependencies]
anyhow = "1.0.82"
arrow = "52.0.0"
arrow-flight = "52.0.0"
datafusion = "39.0.0"
futures = "0.3.30"
thiserror = "1.0.61"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.4"
bytes = "1.6.0"
dashmap = "6.0.1"