[package]
name = "mobiusdb-flight"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = {workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
serde = {workspace = true }
serde_json = "1.0.117"