[package]
name = "mobiusdb-lsm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
thiserror = {workspace = true}
arrow = {workspace = true}
arrow-flight = { workspace = true }
bytes = {workspace = true}
datafusion = {workspace = true}
tokio = {workspace = true}
prost = {workspace = true}
dashmap = {workspace = true}


[dev-dependencies]
arrow = {workspace = true}
arrow-flight = { workspace = true }
